@@ -1,3 +1,10 @@
+Mon Feb  2 13:01:17 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_3559_Regression/run_test.pl:
+          Fixed error in script for WinCE. Script should be waiting for logfile 
+          before calling WaitKill(). Also removed debug command line parameter 
+          since this isn't used by the server.
+
 Mon Feb  2 12:14:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Transport_Cache_Manager_T.cpp:
